# qa-tools

./: README.md  components.d.ts  index.html  package.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/document/: command.rs  cpf.rs  document.rs  mod.rs
src-tauri/src/document/cnpj/: cnpj.rs  command.rs  mod.rs
src-tauri/src/document/cpf/: command.rs  cpf.rs  mod.rs
src-tauri/src/helpers/: mod.rs  random_numbers.rs
src/components/: Content.vue
src/components/generators/: BaseGenerator.vue  GenerateCPF.vue
src/components/humanComponents/: CPF.vue  Documents.vue
src/components/validators/: BaseValidator.vue  ValidateCPF.vue
src/styles/: index.css
