[package]
name = "qa-tools"
version = "0.0.0"
description = "QA Tools"
authors = ["Barussi"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.6.7", features = [ "macos-private-api", "system-tray", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-positioner = { version = "1.0", features = ["system-tray"] }
rand = "0.8.5"
window-vibrancy = "0.4.0"
regex = "1.10.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
